docs: Improve README with comprehensive JLine overview